<resources>
    <string name="app_name">HMB-MODEL</string>
    <string name="todo">TODO</string>
    <string name="todoD">TODO</string>
    <string name="todos">TODO</string>
    <string name="mis_gimnasios">Mis gimnasios</string>
    <string name="suscribirme_a_un_gimnasio">Suscribirme a un gimnasio</string>
    <string name="crear_gimnasio">Crear gimnasio</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="mis_suscripciones">Mis suscripciones</string>
    <string name="administrar_gimnasios">Administrar gimnasios</string>
    <string name="tododod">TODO</string>
    <string name="dwdwdw">TODO</string>
    <string name="wdwdwdw">TODO</string>
    <string name="cerrar_sesi_nwdw">Cerrar sesión</string>
    <string name="detalles_del_gimnasio">Detalles del gimnasio</string>
    <string name="inicio">Inicio</string>
    <string name="nombre_del_gimnasio">Nombre del Gimnasio</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="fecha_de_pago">Fecha de Pago</string>
    <string name="borrar">Borrar</string>
    <string name="nombre_del_propietario">Nombre del Propietario</string>
    <string name="descripci_n">Descripción</string>
    <string name="eliminar">Eliminar</string>
    <string name="mis_gimnasiosS">Mis gimnasios</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="suscribirme">Suscribirme</string>
    <string name="direcci_n">Dirección</string>
    <string name="suscribirme_a_gimnasio">Suscribirme a gimnasio</string>
    <string name="suscribirme_un_gimnasio_en_hmb_model">Suscribirme un gimnasio</string>
    <string name="hola">Hola</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="sxscscs" />
    <string name="wwdwd">Hola</string>
    <string name="nombre_del_gimnasiowdw">Nombre del Gimnasio</string>
    <string name="crear_un_gimnasiowdwd">Crear un gimnasio</string>
    <string name="administrador_de_gimnasios">Administrador de gimnasios</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="informaci_n_de_usuario">Información de usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="correo">correo</string>
    <string name="tel_fonoQSDQDQ">teléfono</string>
    <string name="name">name</string>
    <string name="mi_cuentaWDWDW">Mi cuenta</string>
    <string name="correoWDWDW">Correo:</string>
</resources>