<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MiCuenta">

    <!-- Encabezado -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:elevation="10dp"
        android:background="@color/principal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textWelcomeMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mi_cuentaWDWDW"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerInside"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cerrar_sesi_nwdw"
            android:onClick="logout"
            android:src="@drawable/cerrar"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <!-- Contenido -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account"
                android:contentDescription="@string/suscribirme_a_un_gimnasio"
                android:layout_marginBottom="16dp"
                android:padding="8dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/informaci_n_de_usuario"
                        android:textColor="@color/principal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"
                            android:textSize="16sp"
                            android:textColor="@color/principal" />

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:padding="8dp"
                            android:textColor="@color/principal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/correoWDWDW"
                            android:textSize="16sp"
                            android:textColor="@color/principal" />

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/correo"
                            android:inputType="textEmailAddress"
                            android:padding="8dp"
                            android:textColor="@color/principal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
                            android:autofillHints="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tel_fono"
                            android:textSize="16sp"
                            android:textColor="@color/principal" />

                        <EditText
                            android:id="@+id/editTextPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/tel_fonoQSDQDQ"
                            android:inputType="phone"
                            android:padding="8dp"
                            android:textColor="@color/principal"
                            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
                            android:autofillHints="" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
