<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <!-- ver gimnasios -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@drawable/header_bg"
        android:elevation="10dp">

        <TextView
            android:id="@+id/textWelcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="Cerrar sesión"
            android:src="@drawable/arrow"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <!-- ver gimnasios -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="669dp"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Agrega aquí el contenido principal de tu pantalla -->


        <LinearLayout
            android:id="@+id/administrarGimnasiosLayout"
            android:layout_width="336dp"
            android:layout_height="176dp"
            android:layout_weight="1"
            android:onClick="redirectToAdministrarGimnasios"
            android:padding="16dp"
            android:weightSum="2"
            tools:ignore="DuplicateIds">

            <androidx.cardview.widget.CardView
                android:layout_width="318dp"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="335dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="redirectoToVerSuscripciones"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables,VisualLintBounds">

                    <ImageView
                        android:layout_width="320dp"
                        android:layout_height="44dp"
                        android:src="@drawable/ic_menu_gallery"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mis_gimnasios"
                        android:textAlignment="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/miCuentaLayout"
            android:layout_width="339dp"
            android:layout_height="116dp"
            android:layout_weight="1"
            android:onClick="redirectToSuscribirme"
            android:padding="16dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="323dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="redirectToSuscribirme"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="323dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/todoD"
                        android:src="@drawable/icons"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suscribirme_a_un_gimnasio"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/crearGimnasio"
            android:layout_width="339dp"
            android:layout_height="116dp"
            android:layout_weight="1"
            android:onClick="redirectToSuscribirme"
            android:padding="16dp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="#fff"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="323dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="redirectToCrearGimnasio"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables,VisualLintBounds">

                    <ImageView
                        android:layout_width="323dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/todos"
                        android:src="@drawable/icons"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crear_gimnasio"
                        android:textAlignment="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
